tests/scripts/type_errors/missing_fields.roto
type Foo { a: u32, b: u32, c: u32 }

filter foo() {
	let a = Foo { 
		a: 8,
		d: 9,
		a: 10,
		blabla: 11,
	};

	accept
}
